--- a/main.html
+++ b/main.html
@@ -10,6 +10,17 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+	<h1>Welcome to Accio Jobs!</h1>
+	<img src = ""></img>
+	<p>5 software program developer profession paths</p>
+	<ul>
+		<li>Cloud develpoment</li>
+		<li>Desktop develpoment</li>
+		<li>Video Sport develpoment</li>
+		<li>Mobile develpoment</li>
+		<li>Web develpoment</li>
+		
+	</ul>
 
 </body>
 
